# 3rdpartysources

./: .gitignore  CMakeLists.txt  README.md
Fortran/: CMakeLists.txt  README.md
Fortran/Indirect/: CMakeLists.txt  setup.py
Fortran/Indirect/AbsCorrection/: CMakeLists.txt  Muscat_win32.cmd  Muscat_win64.cmd  cylabs_l64_cmd  cylabs_main.f90  cylabs_subs.f90  cylabs_win32.cmd  cylabs_win64.cmd  fltabs_l64_cmd  fltabs_main.f90  fltabs_subs.f90  fltabs_win32.cmd  fltabs_win64.cmd  mod_files.f90  mod_files.inc  muscat_data.f90  muscat_geom.f90
Fortran/Indirect/Bayes/: Bayes.f90  BlrRes.f90  CEfit.cmd  CEfit.f90  CEfit_win32.cmd  CEfit_win64.cmd  Four.f90  QLdata_lnx.sh  QLdata_main.f90  QLdata_subs.f90  QLdata_win32.cmd  QLdata_win64.cmd  QLres_lnx.sh  QLres_main.f90  QLres_subs.f90  QLres_win32.cmd  QLres_win64.cmd  QLse_lnx.sh  QLse_main.f90  QLse_subs.f90  QLse_win32.cmd  QLse_win64.cmd  Quest_lnx64.sh  Quest_main.f90  Quest_subs.f90  Quest_win32.cmd  Quest_win64.cmd  ResNorm_lnx64.sh  ResNorm_main.f90  ResNorm_subs.f90  ResNorm_win32.cmd  SSfit.f90  SSfit_win32.cmd  SSfit_win64.cmd  Simopt.f90  Util.f90  build-modules.sh  erange.f90  erange_win32.cmd  erange_win64.cmd  (+5 more)
Fortran/Indirect/indirect/: LICENSE.txt  setup.py
Fortran/Indirect/indirect/bayesfitting/: .gitignore  Bayes.f90  Four.f90  QLdata_main.f90  QLdata_subs.f90  QLres_subs.f90  QLse_subs.f90  Quest_main.f90  Quest_subs.f90  ResNorm_main.f90  Simopt.f90  Util.f90  __init__.py  loc_size.f90  mod_data.f90
Fortran/Indirect/indirect/bayesfitting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Fortran/Indirect/mantidindirect/: __init__.py
Fortran/Indirect/mantidindirect/AbsCorrection/: muscat_com.f90  muscat_data_main.f90
Fortran/Indirect/mantidindirect/Bayes/: CMakeLists.txt  QLse_main.f90  __init__.py  loc_size.f90  mod_files.f90  options.f90
Fortran/Muon/MaxEnt/: Back.for  DeadFit.for  FileDef.f90  Modab.for  Multimaxalpha.for  Read.for  Start.for  Tropus.for  chinow.for  chosol.for  compile.bat  dist.for  fft.for  input.for  mantid.for  maxent.for  modamp.for  modbak.for  move.for  msvc11compiler.py  msvccompiler.py  opus.for  output.for  outspec.for  project.for  zft.for
Fortran/gfortran/: gnu.py
cmake/: FindF2PY.cmake  FindGFortran.cmake  FindNumPy.cmake  FindPythonExtensions.cmake
cxxtest/sample/msvc/: CxxTest_1_Run.vcproj  CxxTest_2_Build.vcproj  CxxTest_3_Generate.vcproj  CxxTest_Workspace.sln  runner.cpp
cxxtest/sample/msvc/Debug/: BuildLog.htm  mt.dep  runner.ilk  vc80.idb
gmock-1.5.0/: CMakeLists.txt
gsl-1.14/build.vc10/: config.h  gsl.dll.sln  gsl.lib.sln  gsl.vc10.changes.txt  gsl.vc10.readme.txt  gsldefs.c
gsl-1.14/build.vc10/cblasdll/: cblasdll.vcxproj
gsl-1.14/build.vc10/cblaslib/: cblaslib.vcxproj
gsl-1.14/build.vc10/gsldll/: gsldll.vcxproj  gsldll.vcxproj.filters
gsl-1.14/build.vc10/gsllib/: gsllib.vcxproj  gsllib.vcxproj.filters
gsl-1.14/doc/: gsl-ref.info  gsl-ref.info-5  gsl-ref.info-6
gsl-1.14/matrix/: test.c
msvc/: README.md  vs11_lowercase_menus.reg
muparser-windows/: Changes.txt  DEADJOE  Install.txt
muparser-windows/docs/html/: index.html  mup_features.html  mup_interface.html  mup_intro.html  mup_licence.html  mup_links.html  mup_usage.html  mup_version.html
muparser-windows/docs/html/script/: functions.js
muparser-windows/docs/html/sources/: build_page.sh  mup_features.html  mup_interface.html  mup_intro.html  mup_licence.html  mup_links.html  mup_usage.html  mup_version.html  navigation.html  stat_counter.html
muparser-windows/include/: DEADJOE  muParser.h  muParserBase.h  muParserBytecode.h  muParserCallback.h  muParserDLL.h  muParserDef.h  muParserError.h  muParserFixes.h  muParserInt.h  muParserStack.h  muParserTest.h  muParserToken.h  muParserTokenReader.h
muparser-windows/lib/: example1
muparser-windows/samples/example1/: Example1.cpp
muparser-windows/samples/example3/: Example3.cpp
muparser-windows/src/: muParser.cpp  muParserBase.cpp  muParserBytecode.cpp  muParserCallback.cpp  muParserDLL.cpp  muParserError.cpp  muParserInt.cpp  muParserTest.cpp  muParserTokenReader.cpp
qwtplot3d/src/: qwt3d_coordsys.cpp
szip/: INSTALL_SZIP.txt  INSTALL_SZIP_WIN_MANTID.txt  installszip.bat  sziptest.bat
szip/all/: all.dsw  all.ncb  all.opensdf  all.sdf  all.sln  all.sln.old  all.suo.old
szip/all/all/: all.dsp  all.vcproj  all.vcxproj
szip/all/burst_szip/: burst_szip.dsp  burst_szip.vcproj  burst_szip.vcxproj
szip/all/example/: example.dsp  example.vcproj  example.vcxproj  example.vcxproj.filters
szip/all/gentest/: gentest.dsp  gentest.vcproj  gentest.vcxproj  gentest.vcxproj.filters
szip/all/gentestdll/: gentestdll.dsp  gentestdll.vcproj  gentestdll.vcxproj  gentestdll.vcxproj.filters
szip/all/lib/: lib.dsp  lib.vcproj  lib.vcxproj  lib.vcxproj.filters
szip/all/libdll/: libdll.dsp  libdll.vcproj  libdll.vcxproj  libdll.vcxproj.filters
szip/codewarrior/: szip.mcp
szip/examples/: example.c
